--- a/BikeRental.MVCUI/Views/Locations/Index.cshtml
+++ b/BikeRental.MVCUI/Views/Locations/Index.cshtml
@@ -28,7 +28,9 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+
+@foreach (var item in Model)
+{
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.StreetAddress)
