--- a/BikeRental.MVCUI/Views/Shared/_Layout.cshtml
+++ b/BikeRental.MVCUI/Views/Shared/_Layout.cshtml
@@ -11,10 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container"> 
-                @if(TempData["Message"] != null) 
-                 { 
-                    <div class="alert alert-success"> @TempData["Message"]</div> 
-                 }
+                
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">BikeRental.MVCUI</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -34,6 +31,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Employees" asp-action="Index">Employees</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Bicycles" asp-action="Index">Bicycles</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Reservations" asp-action="Index">Reservations</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -41,6 +44,10 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
+            @if (TempData["Message"] != null)
+            {
+                <div class="alert alert-success"> @TempData["Message"]</div>
+            }
             @RenderBody()
         </main>
     </div>
