--- a/BikeRental.MVCUI/Views/Users/Details.cshtml
+++ b/BikeRental.MVCUI/Views/Users/Details.cshtml
@@ -76,5 +76,8 @@
             }
         </tbody>
     </table>
+    @{ 
+        await Html.PartialAsync("~/Users/CartDisplay.cshtml");
+    }
 </div>
 
