--- a/BikeRental.MVCUI/Views/Users/Index.cshtml
+++ b/BikeRental.MVCUI/Views/Users/Index.cshtml
@@ -13,6 +13,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.City)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.StreetAddress)
+            </th>
 
             <th></th>
         </tr>
@@ -24,7 +27,10 @@
                 @Html.DisplayFor(modelItem => item.City)
             </td>
             <td>
-                <a asp-action="Details" asp-route-id="@item.Id">View Available Bikes</a>               
+                @Html.DisplayFor(modelItem => item.StreetAddress)
+            </td>
+            <td>
+                <a asp-action="Details" asp-route-id="@item.Id">View Available Bikes</a>
             </td>
         </tr>
 }
