--- a/BikeRental.MVCUI/Views/Shared/_Layout.cshtml
+++ b/BikeRental.MVCUI/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="~/css/site.css" />
 
 </head>
-<body>
+<body style="background-image:url('/images/Bicycle-Background-Full-HD.jpg')">
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container"> 
@@ -70,7 +70,7 @@
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="container card card-body" >
         <main role="main" class="pb-3">
             @if (TempData["Message"] != null)
             {
